--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_BASE_URL=https://api.photo-spot.info
 VITE_NAVER_SEARCH=https://openapi.naver.com/v1/search/image
+VITE_REACT_APP_GOOGLE_ANALYTICS=G-50D06EWCBZ
